# drone_control_pkgs

./: .gitignore  NMPC_V2_README.md  README.md  analyze_bag.py
2026_04_17_sim_landing/: metadata.yaml
2026_04_28_02/: metadata.yaml
DataSet/: _att_moment_dob.py  _des_act_rp.py  _dob_nmpc_split.py  _omega_residual.py  _rpm_moment.py  _thrust_omega_corr.py  _thrust_vib_corr.py
bag_folder/: _burst_zoom.py  _drift_source.py  _ep_vs_des_rp.py  _exy_spectrum.py  _fdes_vs_pos.py  _hgdo_torque.py  _hgdo_viscous.py  _imu_lag.py  _lever_arm_check.py  _lever_arm_correction.py  _motor_sat.py  _pd_decomp.py  _pos_err_des_rp.py  _pos_jump_check.py  _psd_raw_imu.py  _psd_vibration.py  _rot_damping.py  _vworld_deep.py  _yaw_track.py  _z_zoom.py  analyze_2026_04_17_sim.py  analyze_2026_04_21_att_sim.py  analyze_2026_05_11_free_flight.py  analyze_att_exp_01.py  analyze_bag.py  analyze_flight05.py  analyze_hgdo_overcomp.py  analyze_landing3.py  analyze_pitch_test_hgdo.py  analyze_roll_tests.py  analyze_roll_tests_04_06.py  analyze_roll_tests_hgdo.py  analyze_roll_tests_hgdo_updated.py  analyze_roll_tests_noise.py  analyze_unstable.py  analyze_unstable_yaw.py  analyze_weight_comparison.py  att_stand_rpy.py  attitude_source_lag.py  check_hgdo_drift.py  (+25 more)
bag_folder/2026_03_06/: 2026_03_06_0.db3  metadata.yaml
bag_folder/2026_03_07/: 2026_03_07_0.db3  metadata.yaml
bag_folder/2026_03_08/: 2026_03_08_0.db3  metadata.yaml
bag_folder/2026_03_09/: 2026_03_09_0.db3  metadata.yaml
bag_folder/2026_03_22_nmpc/: metadata.yaml
bag_folder/2026_03_22_nmpc_2/: metadata.yaml
bag_folder/2026_03_23_nmpc_lpf/: metadata.yaml
bag_folder/2026_03_25_nmpc_01_1/: metadata.yaml
bag_folder/2026_03_26_01/: metadata.yaml
bag_folder/2026_03_26_02/: metadata.yaml
bag_folder/2026_03_26_03/: metadata.yaml
bag_folder/2026_03_26_04/: 2026_03_26_04_0.db3  metadata.yaml
bag_folder/2026_03_26_05/: 2026_03_26_05_0.db3  metadata.yaml
bag_folder/2026_03_26_06/: 2026_03_26_06_0.db3  metadata.yaml
bag_folder/2026_03_26_07/: metadata.yaml
bag_folder/2026_03_30_delay_20ms/: 2026_03_30_delay_20ms_0.db3  metadata.yaml
bag_folder/2026_03_30_no_delay/: 2026_03_30_no_delay_0.db3  metadata.yaml
bag_folder/2026_03_30_sim/: metadata.yaml
bag_folder/2026_03_30_sim_tunning/: metadata.yaml
bag_folder/2026_03_31_01/: metadata.yaml
bag_folder/2026_03_31_02/: metadata.yaml
bag_folder/2026_03_31_03/: 2026_03_31_03_0.db3  metadata.yaml
bag_folder/2026_03_31_04/: 2026_03_31_04_0.db3  metadata.yaml
bag_folder/2026_03_31_05/: metadata.yaml
bag_folder/2026_04_01_sim/: metadata.yaml
bag_folder/2026_04_07_sim/: 2026_04_07_sim_0.db3  metadata.yaml
bag_folder/2026_04_15_pitch_test_01/: metadata.yaml
bag_folder/2026_04_15_pitch_test_02/: metadata.yaml
bag_folder/2026_04_17_sim/: 2026_04_17_sim_0.db3  metadata.yaml
bag_folder/2026_04_17_sim_new/: metadata.yaml
bag_folder/2026_04_17_sim_unstable/: metadata.yaml
bag_folder/2026_04_21_att_sim/: metadata.yaml
bag_folder/2026_04_21_unstable_yaw_sim/: metadata.yaml
bag_folder/2026_04_22_sim/: metadata.yaml
docs/: command_filtered_backstepping.md
drone_control/: package.xml  setup.py
drone_dob/: CMakeLists.txt  package.xml
drone_dob/config/: hgdo_config.yaml  l1_adaptive_config.yaml
drone_dob/include/models/: hgdo_model.cpp  hgdo_model.hpp
drone_dob/include/models/hgdo_model/: hgdo_model.cpp  hgdo_model.hpp
drone_dob/include/models/l1_adaptive_model/: adaptation_law.cpp  adaptation_law.hpp  l1_adaptation_model.cpp  l1_adaptation_model.hpp  l1_adaption_model.hpp  state_predictor.cpp  state_predictor.hpp
drone_dob/include/node/: hgdo_node.cpp  hgdo_node.hpp  l1_adaptive_node.cpp  l1_adaptive_node.hpp  l1_dob_node.cpp  l1_dob_node.hpp  sync_test_node.cpp  sync_test_node.hpp
drone_dob/include/utils/: CircularBuffer.hpp  HexaRotorRpmToCmd.cpp  HexaRotorRpmToCmd.hpp  LowPassFilter.cpp  LowPassFilter.hpp  math_tool.cpp  math_tool.hpp  rk4_ode_solver.hpp  state_def.hpp
drone_dob/launch/: hgdo.launch.py  l1_adaptive.launch.py
drone_dob/src/: hgdo_node_main.cpp  l1_adaptive_node_main.cpp  sync_test_node_main.cpp
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: Ref.msg  RpyRef.msg
(+186 files in other folders)
